# Chinese-Input-Agent

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  build-llama-worker.bat  build-mingw.bat  build.bat  package-installer-mingw.bat  package-mingw.bat  test-ab-installs.bat  test.bat
models/: README.md
src/: app.manifest  app_archive.c  app_archive.h  app_carrier_flow.c  app_carrier_flow.h  app_carrier_options.h  app_chat_history.c  app_chat_history.h  app_constants.h  app_contact_flow.c  app_contact_flow.h  app_flow.c  app_flow.h  app_groups.c  app_groups.h  app_installer_config.h  app_limits.h  app_llm.c  app_llm.h  app_message_flow.c  app_message_flow.h  app_paths.h  app_profiles.c  app_profiles.h  app_progress.h  app_shared.c  app_shared.h  app_storage.c  app_storage.h  app_tokenizer_prefs.c  app_tokenizer_prefs.h  app_work.c  app_work.h  cia_core.c  cia_core.h  cia_platform_windows.c  cia_platform_windows.h  crypto_box.c  crypto_box.h  installer.c  (+16 more)
tools/packaging/: append_installer_payload.py  make_installer_archive.py
tools/payload_watermark/: cia_llama_worker.cpp  worker_config.txt
tools/payload_watermark/llama_worker/: CMakeLists.txt
tools/payload_watermark/prompts/: README.txt  default.txt  group_key.txt  outline.txt  reject_phrases.txt  self_intro.txt
tools/tests/: ab_crypto_exchange_test.c  chat_history_sqlite_test.c  cia_core_smoke_test.c  test_ab_installs_crypto_exchange.ps1  test_ab_worker_cross_model_carrier.ps1  test_chat_history_sqlite.ps1  test_cia_core_smoke.ps1  test_project_invariants.ps1  test_worker_key_carriers.ps1
